--- a/resources/sass/app/_navigation.scss
+++ b/resources/sass/app/_navigation.scss
@@ -1,5 +1,18 @@
-.nav-icon-item {
-    font-size: 1.25rem;
-    vertical-align: -35%;
-    display: inline;
+.p-menubar-mobile {
+    justify-content: space-between;
+    width: 100%;
+}
+
+.main-menu-right {
+    .user-avatar {
+        > .p-menuitem-content {
+            > .p-menuitem-link {
+                padding: 0.25rem 0.5rem !important;
+            }
+        }
+    }
+
+    .p-menuitem-content, .p-menuitem-link {
+        height: 100%;
+    }
 }
