--- a/resources/sass/override/_toast.scss
+++ b/resources/sass/override/_toast.scss
@@ -1,105 +1,10 @@
-.b-toast {
+.p-toast-message-text {
 
-    .toast {
-        padding: 10px;
-        border-style: solid;
-        border-width: 1px 1px 1px 10px;
-    }
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
 
-    .toast-header, .toast-body {
-        margin-left: 40px;
-        padding: 0;
-    }
-
-    .toast-header {
-        display: block !important;
-        border: 0 !important;
-        background-color: transparent !important;
-        color: #FFF !important;
-
-        .close {
-            color: #FFF !important;
-            position: absolute;
-            right: 10px;
-            top: 10px;
-            line-height: 1.2rem;
-        }
-    }
-
-    .toast-body {
-        margin-right: 35px !important;
-        padding: 0px !important;
-        color: #FFF !important;
-    }
-
-    .toast::before {
-        font-family: $fa-style-family;
-        font-size: 25px;
-        position: absolute;
-        top: 0;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #FFF !important;
-
-    }
-
-    &.b-toast-success {
-        .toast {
-            border-color: $green !important;
-            background-color: rgba($green, 0.8) !important;
-
-            &:hover {
-                background-color: rgba($green, 1) !important;
-            }
-        }
-
-        .toast::before {
-            content: fa-content($fa-var-circle-check);
-        }
-    }
-
-    &.b-toast-info {
-        .toast {
-            border-color: $info !important;
-            background-color: rgba($info, 0.8) !important;
-
-            &:hover {
-                background-color: rgba($info, 1) !important;
-            }
-        }
-
-        .toast::before {
-            content: fa-content($fa-var-circle-info);
-        }
-    }
-
-    &.b-toast-danger {
-        .toast {
-            border-color: $danger !important;
-            background-color: rgba($danger, 0.68) !important;
-
-            &:hover {
-                background-color: rgba($danger, 1) !important;
-            }
-        }
-        .toast::before {
-            content: fa-content($fa-var-circle-xmark);
-        }
-    }
-
-    &.b-toast-warning {
-        .toast {
-            border-color: $warning !important;
-            background-color: rgba($warning, 0.68) !important;
-
-            &:hover {
-                background-color: rgba($warning, 1) !important;
-            }
-        }
-        .toast::before {
-                content: fa-content($fa-var-circle-exclamation);
-        }
+    .p-toast-detail {
+        margin: 0;
     }
 }
