--- a/resources/sass/theme/default/_variables.scss
+++ b/resources/sass/theme/default/_variables.scss
@@ -34,8 +34,9 @@ $fontFamily: "Inter var", sans-serif !default;
 $fontSize: 1rem !default;
 $fontWeight: normal !default;
 $textColor: $shade700 !default;
-$textSecondaryColor: $shade500 !default;
-$borderRadius: 6px !default;
+$textSecondaryColor: tint-color($textColor, 40%) !default;
+$enable-rounded: true !default;
+$borderRadius: if($enable-rounded, 6px, 0) !default;
 $transitionDuration: 0.2s !default;
 $formElementTransition: background-color $transitionDuration,
     color $transitionDuration, border-color $transitionDuration,
@@ -875,8 +876,8 @@ $imagePreviewActionIconBorderRadius: 50% !default;
     font-variation-settings: normal;
     --font-family: "Inter var", sans-serif;
     --font-feature-settings: "cv02", "cv03", "cv04", "cv11";
-    --text-color: #{$shade700};
-    --text-color-secondary: #{$shade500};
+    --text-color: #{$textColor};
+    --text-color-secondary: #{$textSecondaryColor};
     --primary-color: #{$primaryColor};
     --primary-color-text: #{$primaryTextColor};
     --surface-0: #ffffff;
@@ -906,7 +907,7 @@ $imagePreviewActionIconBorderRadius: 50% !default;
     --content-padding: 1.125rem;
     --inline-spacing: #{$inlineSpacing};
     --border-radius: #{$borderRadius};
-    --surface-ground: #f8fafc;
+    --surface-ground: #{$bodyBg};
     --surface-section: #ffffff;
     --surface-card: #ffffff;
     --surface-overlay: #ffffff;
