--- a/resources/sass/theme/default/extensions/_selectbutton.scss
+++ b/resources/sass/theme/default/extensions/_selectbutton.scss
@@ -1,5 +1,6 @@
 .p-selectbutton {
     .p-button {
+
         .pi,
         .p-button-label {
             position: relative;
@@ -9,7 +10,6 @@
         &::before {
             content: '';
             background-color: transparent;
-            transition: $formElementTransition;
             position: absolute;
             left: .25rem;
             top: .25rem;
@@ -19,9 +19,13 @@
         }
 
         &.p-highlight {
+            .p-button-label {
+                color: $buttonTextColor;
+            }
+
             &::before {
-                background: $shade000;
-                border-color: $shade000;
+                background: $buttonBg;
+                border-color: $buttonBg;
                 box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.02), 0px 1px 2px 0px rgba(0, 0, 0, 0.04);
             }
         }
