Move all overrides to separate folder, remove extensions folder

--- a/resources/sass/override/override.scss
+++ b/resources/sass/override/override.scss
@@ -5,5 +5,7 @@
 @import "forms";
 @import "inputswitch";
 @import "multiselect";
+@import "selectbutton";
 @import "tabview";
 @import "toast";
+@import "togglebutton";
