--- a/resources/sass/theme/default/theme.scss
+++ b/resources/sass/theme/default/theme.scss
@@ -10,4 +10,4 @@ $highlightFocusBg: #d1fae5 !default;
 @import './_variables';
 @import './_fonts';
 @import 'primevue-sass-theme/theme-base/_components';
-@import './extensions/_extensions';
+@import 'primevue-sass-theme/themes/aura/aura-light/extensions/extensions';
