--- a/resources/sass/override/_selectbutton.scss
+++ b/resources/sass/override/_selectbutton.scss
@@ -13,6 +13,7 @@
             &::before {
                 background: $buttonBg;
                 border-color: $buttonBg;
+                border-radius: var(--border-radius);
             }
         }
     }
