--- a/resources/sass/override/_togglebutton.scss
+++ b/resources/sass/override/_togglebutton.scss
@@ -15,6 +15,7 @@
             &::before {
                 background: $buttonBg;
                 border-color: $buttonBg;
+                border-radius: var(--border-radius);
             }
         }
     }
