--- a/resources/sass/theme/default/app.scss
+++ b/resources/sass/theme/default/app.scss
@@ -1,76 +1,3 @@
 // To customize the colors, edit _variables.scss
-//@import 'variables';
-//@import '../../base';
-
-//@import 'modern-normalize/modern-normalize.css';
-
-// The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
-// See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
-
-$white:    #fff !default;
-$black:    #000 !default;
-
-$min-contrast-ratio:   2.5 !default;
-
-// Customize the light and dark text colors for use in our color contrast function.
-$color-contrast-dark:      $black !default;
-$color-contrast-light:     $white !default;
-
-// Body background
-$bodyBg: #edf1f6;
-
-// Colors
-$blue: #2980b9;
-$red: #c0392b;
-$orange: #d35400;
-$green: #27ae60;
-$purple: #8e44ad;
-
-// Branding color
-$primary: #0b9383;
-$linkColor: $primary;
-
-// Recommended to use a black/grey, color is used for some buttons and most text
-$secondary: #3a4d5d;
-$textColor: $secondary;
-
-// Semantic colors
-$success: $green;
-$info: $blue;
-$warning: $orange;
-$danger: $red;
-$help: $purple;
-
-@import '../../app/functions';
-
-$primaryColor: $primary !default;
-$primaryLightColor: tint-color($primaryColor, 20%) !default;
-$primaryDarkColor: shade-color($primaryColor, 20%) !default;
-$primaryDarkerColor: shade-color($primaryColor, 40%) !default;
-$primaryTextColor: color-contrast($primaryColor) !default;
-
-$highlightBg: #F0FDFA !default;
-$highlightTextColor: $primaryDarkerColor !default;
-$highlightFocusBg: rgba($primaryColor, .24) !default;
-
-
-// Typography
-@import './_fonts';
-
-$fontFamily: SourceSansPro, sans-serif;
-
-@import 'theme';
-@import "streched-link";
-@import 'primeflex/primeflex.css';
-
-@import '../../app/app';
-
-// Font Awesome
-$fa-font-path: "@fortawesome/fontawesome-free/webfonts";
-@import "@fortawesome/fontawesome-free/scss/fontawesome";
-@import "@fortawesome/fontawesome-free/scss/solid";
-
-// Vue Multi-Select
-@import "vue-multiselect/dist/vue-multiselect.css";
-
-@import "../../override/override";
+@import 'variables';
+@import '../../base';
