--- a/resources/sass/theme/default/_variables.scss
+++ b/resources/sass/theme/default/_variables.scss
@@ -6,10 +6,10 @@ $bodyBg: #edf1f6;
 // Colors
 $purple: #8e44ad;
 $indigo: #6366F1;
-$blue: #2980b9;
+$blue: #0e84d2;
 $cyan: #06B6D4;
 $red: #c0392b;
-$orange: #d35400;
+$orange: #d37f00;
 $yellow: #EAB308;
 $green: #27ae60;
 $pink: #EC4899;
