--- a/resources/sass/theme/thm/_variables.scss
+++ b/resources/sass/theme/thm/_variables.scss
@@ -41,6 +41,7 @@ $fontFeatureSettings: normal !default;
 // Overwrite button color
 $primaryTextColor: #FFF;
 $successButtonTextColor: #FFF;
+$warningButtonTextColor: #FFF;
 
 // Overwrite messages and alerts
 $warningMessageBg: rgba(255, 243, 225, 0.95);
