--- a/resources/sass/override/_multiselect.scss
+++ b/resources/sass/override/_multiselect.scss
@@ -59,6 +59,7 @@
     }
 
     .multiselect__single{
+        //@TODO Change style
         padding: 0;
         margin: 0;
         color: $inputTextColor;
