--- a/resources/sass/app/_typography.scss
+++ b/resources/sass/app/_typography.scss
@@ -3,3 +3,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.text-word-break {
+    overflow-wrap: anywhere;
+    word-break: normal;
+}
